--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,15 +1,21 @@
 .app {
   margin: 0 auto;
-  padding: 50px 103px;
-  max-width: 960px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 50px 0;
+  max-width: 754px;
+  display: grid;
+  grid-template-columns: 1fr;
+  @media (max-width: 754px){
+    padding: 25px 0;
+    max-width: 100%;
+  }
 }
 .logo {
   margin: 0 auto 45px auto;
-  width: 65px;
-  height: 65px;
+  width: 60px;
+  height: 60px;
+  @media (max-width: 754px){
+    margin: 0 auto 25px auto;
+  }
   img {
     width: 100%;
     height: 100%;
@@ -17,6 +23,21 @@
   }
 }
 .content {
-  display: flex;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 232px 502px;
+ 
   column-gap: 20px;
+  row-gap: 20px;
+  @media (max-width: 754px) {
+    max-width: 754px;
+    align-items: center;
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+  }
+}
+.ticketslist{
+  max-width: 502px;
+  margin: 0 auto;
+  align-items: center;
 }
