--- a/src/components/TransfersFilter/TransfersFilter.module.scss
+++ b/src/components/TransfersFilter/TransfersFilter.module.scss
@@ -1,20 +1,36 @@
 .filtersWrapper{
-    width: 232px;
-    max-height: 260px;
+    margin: 0 auto;
+    max-height: 258px;
     border-radius: 5px;
     background-color: #FFFFFF;
     box-shadow: 0px 2px 8px 0px #0000001A;
     padding: 20px 0;
-    
-
+    max-width: 502px;
+    @media (max-width: 754px){
+        max-width: 502px;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
 .title{
-font-size: 14px;
+font-size: 12px;
 font-weight: 600;
 line-height: 12px;
 letter-spacing: 0.5px;
 text-align: left;
 flood-color: #4A4A4A;
-text-transform: lowercase;
+text-transform: uppercase;
 padding: 0 20px 10px 20px;
+white-space: nowrap;
+@media (max-width: 754px){
+    text-align: center;  
+}
+}
+@media (max-width: 754px) {
+    .tickets{
+        max-height: 175px;
+        max-width: 502px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr; 
+    }   
 }
