--- a/src/components/TransfersFilter/TransfersFilter.module.scss
+++ b/src/components/TransfersFilter/TransfersFilter.module.scss
@@ -1,15 +1,18 @@
 .filtersWrapper{
+    display: grid;
+    grid-template-columns: 1fr;
     margin: 0 auto;
     max-height: 258px;
     border-radius: 5px;
     background-color: #FFFFFF;
     box-shadow: 0px 2px 8px 0px #0000001A;
     padding: 20px 0;
-    max-width: 502px;
+    max-width: 232px;
+    
     @media (max-width: 754px){
         max-width: 502px;
-        display: grid;
-        grid-template-columns: 1fr;
+       
+       
     }
 }
 .title{
@@ -26,11 +29,16 @@ white-space: nowrap;
     text-align: center;  
 }
 }
+.tickets{
+    display: grid;
+    grid-template-columns: 1fr;
+    min-width: 232px;
+
 @media (max-width: 754px) {
-    .tickets{
+    
         max-height: 175px;
         max-width: 502px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr; 
-    }   
-}
+    
+}}
