--- a/src/components/TicketsList/TicketsList.module.scss
+++ b/src/components/TicketsList/TicketsList.module.scss
@@ -26,3 +26,17 @@
     opacity: 0.9;
   }
 }
+.title {
+  margin: 0 0 20px 0;
+  padding: 15px 20px;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+ 
+  color: black;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  
+}
