--- a/src/components/TransfersFilterItem/TransfersFilterItem.module.scss
+++ b/src/components/TransfersFilterItem/TransfersFilterItem.module.scss
@@ -1,6 +1,6 @@
 .item {
   display: flex;
-  width: 167px;
+  min-width: 167px;
   justify-content: center;
   align-items: center;
   color: #4a4a4a;
